--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<H1>Hello Coursera!!!!</H1>
+<H1>Hello Coursera!!!! ITS A GREAT COURSE</H1>
 </body>
 </html>
