--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" contetn="width=device-width, initial-scale=1">
+
+	<title>Responsive Layout</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<H1>Hello Coursera!!!! ITS A GREAT COURSE</H1>
-<P>I'm going to learn how to make this work, yea boyssssss</P>
+	<h1>Our Menu</h1>
+
+	<div class="container-fluid">
+		<div class="row">
+		  <div class="col-lg-4 col-md-6">
+		  	<section id="body">
+		  		<h2 id="op1">Chicken</h2>
+		  		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+		  	</section>
+		  </div>
+		  <div class="col-lg-4 col-md-6">
+		  	<section id="body">
+		  		<h2 id="op2">Beef</h2>
+		  		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+		  	</section>
+		  </div>
+		  <div class="col-lg-4 col-md-12">
+		  	<section id="body">
+		  		<h2 id="op3">Sushi</h2>
+		  		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+		  	</section>
+		  </div>
+		</div>
+	</div>
 </body>
 </html>
